--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "start-client",
+  "name": "bd-log",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,14 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "libphonenumber-js": "^1.10.8",
+    "maz-ui": "^3.0.1",
+    "pinia": "^2.0.14",
+    "vee-validate": "^4.5.11",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "vue-cli-plugin-pinia": "~0.1.3"
   },
   "browserslist": [
     "> 1%",
